@@ -1,10 +1,8 @@
-# $NetBSD: Makefile,v 1.16 2003/07/17 21:28:04 grant Exp $
+# $NetBSD: Makefile,v 1.17 2003/10/09 17:23:16 jdolecek Exp $
 
-DISTNAME=	freetds-0.61
-PKGREVISION=	1
+DISTNAME=	freetds-0.61.2
 CATEGORIES=	databases
 MASTER_SITES=	ftp://ftp.ibiblio.org/pub/Linux/ALPHA/freetds/stable/
-EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	tsarna@NetBSD.org
 HOMEPAGE=	http://www.freetds.org/
